--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="frontend/styles/style.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&family=Open+Sans:wght@700&family=Poppins:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800;900&family=Open+Sans:wght@300;400;500;600;700;800&family=Poppins:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -149,7 +149,7 @@
         <div class="col">
           <div class="card h-100">
             <img
-              src="frontend/images/labuanbajo.jpg"
+              src="frontend/images/labuan-bajo1.jpg"
               class="card-img-top"
               alt="..."
             />
@@ -162,7 +162,7 @@
         <div class="col">
           <div class="card h-100">
             <img
-              src="frontend/images/labuanbajo.jpg"
+              src="frontend/images/labuan-bajo1.jpg"
               class="card-img-top"
               alt="..."
             />
@@ -175,7 +175,7 @@
         <div class="col">
           <div class="card h-100">
             <img
-              src="frontend/images/labuanbajo.jpg"
+              src="frontend/images/labuan-bajo1.jpg"
               class="card-img-top"
               alt="..."
             />
@@ -188,7 +188,7 @@
         <div class="col">
           <div class="card h-100">
             <img
-              src="frontend/images/labuanbajo.jpg"
+              src="frontend/images/labuan-bajo1.jpg"
               class="card-img-top"
               alt="..."
             />
