--- a/produk.html
+++ b/produk.html
@@ -9,9 +9,11 @@
       rel="stylesheet"
       href="frontend/libraries/bootstrap/css/bootstrap.css"
     />
+
+    <link rel="stylesheet" href="frontend/libraries/xzoom/xzoom.css" />
     <link rel="stylesheet" href="frontend/styles/style.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600&family=Open+Sans:wght@700&family=Poppins:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800;900&family=Open+Sans:wght@300;400;500;600;700;800&family=Poppins:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -50,154 +52,148 @@
           </div>
         </div>
       </nav>
-      <div class="container-fluid header">
-        <div class="container jumbotron-headline">
-          <h1>Explore</h1>
-          <h2>Your Amazing City Tour Together</h2>
+    </div>
+    <div class="container halaman-produk">
+      <div class="container produk-headline">
+        <h1>5D Amazing Labuan Bajo</h1>
+        <h2>Nusa Tenggara Timur</h2>
+      </div>
+      <div
+        id="carouselExampleIndicators"
+        class="container carousel slide gallery mr-auto"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleIndicators"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
         </div>
-        <div class="container jumbotron-searchbar">
-          <p>Find great places to holliday</p>
-          <div class="input-group mb-3">
-            <input
-              type="text"
-              class="form-control"
-              aria-describedby="button-addon2"
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img
+              src="frontend/images/labuan-bajo1.jpg"
+              class="d-block w-100"
+              alt="..."
             />
-            <button
-              class="btn btn-outline-secondary btn-search"
-              type="button"
-              id="button-addon2"
-            >
-              Search
-            </button>
+          </div>
+          <div class="carousel-item">
+            <img
+              src="frontend/images/labuan-bajo2.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+          </div>
+          <div class="carousel-item">
+            <img
+              src="frontend/images/labuan-bajo3.jpg"
+              class="d-block w-100"
+              alt="..."
+            />
+          </div>
+        </div>
+        <button
+          class="carousel-control-prev"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="prev"
+        >
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button
+          class="carousel-control-next"
+          type="button"
+          data-bs-target="#carouselExampleIndicators"
+          data-bs-slide="next"
+        >
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+      <div class="container produk-information-trip">
+        <h3>Information Trip</h3>
+        <div class="row row-cols-2 row-cols-md-5 g-4">
+          <div class="col">
+            <h4>Accomodation</h4>
+            <p class="information-details">
+              <img src="frontend/images/hotel.png" alt="" />
+              Hotel 4 Nights
+            </p>
+          </div>
+          <div class="col">
+            <h4>Transportation</h4>
+            <p class="information-details">
+              <img src="frontend/images/plane.png" alt="" />
+              Garuda Indonesia
+            </p>
+          </div>
+          <div class="col">
+            <h4>Eat</h4>
+            <p class="information-details">
+              <img src="frontend/images/meal.png" alt="" />
+              Included
+            </p>
+          </div>
+          <div class="col">
+            <h4>Duration</h4>
+            <p class="information-details">
+              <img src="frontend/images/time.png" alt="" />
+              5 Day 4 Night
+            </p>
+          </div>
+          <div class="col">
+            <h4>Date</h4>
+            <p class="information-details">
+              <img src="frontend/images/calendar.png" alt="" />
+              12 March 2021
+            </p>
           </div>
         </div>
       </div>
-    </div>
-
-    <div class="container feature">
-      <div class="row row-cols-1 row-cols-md-4 g-4">
-        <div class="col">
-          <div class="card h-100">
-            <img
-              src="frontend/images/logo-guarantee.png"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">Best Price Guarantee</h5>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img
-              src="frontend/images/logo-heart.png"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">Travellers Love Us</h5>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img
-              src="frontend/images/logo-agent.png"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">Best Travel Agent</h5>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img
-              src="frontend/images/logo-support.png"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">Our Dedicated Support</h5>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor.
-              </p>
-            </div>
-          </div>
-        </div>
+      <div class="container produk-description">
+        <h3>Description</h3>
+        <h4>
+          Nikmati liburan keliling labuan bajo selama 5 hari 4 malam dengan
+          akomodasi dan transportasi yang nyaman.
+        </h4>
       </div>
-    </div>
-    <div class="container paket">
-      <h2>Paket Tour</h2>
-      <div class="row row-cols-1 row-cols-md-3 g-4">
-        <div class="col">
-          <div class="card h-100">
-            <img
-              src="frontend/images/labuanbajo.jpg"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">5D Amazing Labuan Bajo</h5>
-              <p class="card-text">harusnya harga</p>
-            </div>
+      <div class="container produk-price">
+        <div class="row row-cols-2 row-cols-md-5 g-4">
+          <div class="col">
+            <h5>IDR. 750,000.00<span>/ Person</span></h5>
+          </div>
+          <div class="col ms-auto">
+            <h4>Transportation</h4>
           </div>
         </div>
-        <div class="col">
-          <div class="card h-100">
-            <img
-              src="frontend/images/labuanbajo.jpg"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">5D Amazing Labuan Bajo</h5>
-              <p class="card-text">harusnya harga</p>
-            </div>
+        <hr />
+        <div class="row row-cols-2 row-cols-md-5 g-4">
+          <div class="col">
+            <h5>Total :</h5>
+          </div>
+          <div class="col ms-auto">
+            <h5>IDR. 750,000.00</h5>
           </div>
         </div>
-        <div class="col">
-          <div class="card h-100">
-            <img
-              src="frontend/images/labuanbajo.jpg"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">5D Amazing Labuan Bajo</h5>
-              <p class="card-text">harusnya harga</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img
-              src="frontend/images/labuanbajo.jpg"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">5D Amazing Labuan Bajo</h5>
-              <p class="card-text">harusnya harga</p>
-            </div>
-          </div>
-        </div>
+        <hr />
+        <button>Book Now</button>
       </div>
     </div>
     <main></main>
