--- a/checkout.html
+++ b/checkout.html
@@ -15,7 +15,6 @@
       rel="stylesheet"
     />
   </head>
-
   <body>
     <div class="jumbotron-home">
       <nav class="navbar navbar-expand-lg navbar-light">
@@ -50,34 +49,12 @@
           </div>
         </div>
       </nav>
-      <div class="container-fluid header">
-        <div class="container jumbotron-headline">
-          <h1>Explore</h1>
-          <h2>Your Amazing City Tour Together</h2>
-        </div>
-        <div class="container jumbotron-searchbar">
-          <p>Find great places to holliday</p>
-          <div class="input-group mb-3">
-            <input
-              type="text"
-              class="form-control"
-              aria-describedby="button-addon2"
-            />
-            <button
-              class="btn btn-outline-secondary btn-search"
-              type="button"
-              id="button-addon2"
-            >
-              Search
-            </button>
-          </div>
-        </div>
-      </div>
     </div>
-
     <main></main>
     <footer>
-      <p>Copyright &copy; 2021 Adventura - Wildan Shafa Diandra</p>
+      <div class="container-fluid">
+        <p>Copyright &copy; 2021 Adventura - Wildan Shafa Diandra</p>
+      </div>
     </footer>
     <script src="frontend/libraries/jquery/jquery-3.6.0.min.js"></script>
     <script src="frontend/libraries/bootstrap/js/bootstrap.js"></script>
