--- a/index.html
+++ b/index.html
@@ -1,210 +1,246 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Adventura - Tour and Travel</title>
-    <link
-      rel="stylesheet"
-      href="frontend/libraries/bootstrap/css/bootstrap.css"
-    />
-    <link rel="stylesheet" href="frontend/styles/style.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800;900&family=Open+Sans:wght@300;400;500;600;700;800&family=Poppins:wght@400;500;600;700;800&display=swap"
-      rel="stylesheet"
-    />
-  </head>
 
-  <body>
-    <div class="jumbotron-home">
-      <nav class="navbar navbar-expand-lg navbar-light">
-        <div class="container">
-          <a class="navbar-brand" href="#">
-            <img src="frontend/images/logo-adventura.png" alt="" height="60" />
-          </a>
-          <button
-            class="navbar-toggler"
-            type="button"
-            data-bs-toggle="collapse"
-            data-bs-target="#navbarNav"
-            aria-controls="navbarNav"
-            aria-expanded="false"
-            aria-label="Toggle navigation"
-          >
-            <span class="navbar-toggler-icon"></span>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Adventura - Tour and Travel</title>
+  <link rel="stylesheet" href="frontend/libraries/bootstrap/css/bootstrap.css" />
+  <link rel="stylesheet" href="frontend/styles/style.css" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800;900&family=Open+Sans:wght@300;400;500;600;700;800&family=Poppins:wght@400;500;600;700;800&display=swap"
+    rel="stylesheet" />
+</head>
+
+<body>
+  <!-- Navigation Bar -->
+  <div class="jumbotron-home">
+    <nav class="navbar navbar-expand-lg navbar-light">
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="frontend/images/logo-adventura.png" alt="" style="padding-top: 20px; max-height: 100px" />
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item mx-2">
+              <button class="btn btn-primary btn-login" type="button" data-bs-toggle="modal"
+                data-bs-target="#modal-login">
+                Login
+              </button>
+            </li>
+            <li class="nav-item mx-2">
+              <button class="btn btn-primary btn-register" type="button" data-bs-toggle="modal"
+                data-bs-target="#modal-register">
+                Register
+              </button>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!-- Login Form -->
+      <div class="modal fade" id="modal-login" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <div class="container login-form">
+                <h1>Login</h1>
+                <form>
+                  <div class="mb-3">
+                    <label for="exampleInputEmail1" class="form-label">Email</label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleInputPassword1" class="form-label">Password</label>
+                    <input type="password" class="form-control" id="exampleInputPassword1" />
+                  </div>
+                  <div class="ms-auto">
+                    <button type="submit" class="btn btn-primary">
+                      Submit
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Register Form -->
+      <div class="modal fade" id="modal-register" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <div class="container login-form">
+                <h1>Register</h1>
+                <form>
+                  <div class="mb-3">
+                    <label class="form-label">Username</label>
+                    <input type="text" class="form-control" id="username" />
+                  </div>
+                  <div class="mb-3">
+                    <label class="form-label">Email</label>
+                    <input type="email" class="form-control" id="email" />
+                  </div>
+                  <div class="mb-3">
+                    <label class="form-label">Password</label>
+                    <input type="password" class="form-control" id="password" />
+                  </div>
+                  <div class="mb-3">
+                    <label class="form-label">Phone</label>
+                    <input type="text" class="form-control" id="phoneNumber" />
+                  </div>
+                  <div class="mb-3">
+                    <label class="form-label">Address</label>
+                    <input type="text" class="form-control" id="homeAddress" />
+                  </div>
+                  <div class="ms-auto">
+                    <button type="submit" class="btn btn-primary">
+                      Submit
+                    </button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <div class="container-fluid header">
+      <div class="container jumbotron-headline">
+        <h1>Explore</h1>
+        <h2>Your Amazing City Tour Together</h2>
+      </div>
+      <div class="container jumbotron-searchbar">
+        <p>Find great places to holliday</p>
+        <div class="input-group mb-3">
+          <input type="text" class="form-control" aria-describedby="button-addon2" />
+          <button class="btn btn-outline-secondary btn-search" type="button" id="button-addon2">
+            Search
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ms-auto">
-              <li class="nav-item mx-2">
-                <button class="btn btn-primary btn-login" type="submit">
-                  Login
-                </button>
-              </li>
-              <li class="nav-item mx-2">
-                <button class="btn btn-primary btn-register" type="submit">
-                  Register
-                </button>
-              </li>
-            </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+  </div>
+  <div class="container feature">
+    <div class="row row-cols-1 row-cols-md-4 g-4">
+      <div class="col">
+        <div class="card h-100">
+          <img src="frontend/images/logo-guarantee.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Best Price Guarantee</h5>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor.
+            </p>
           </div>
         </div>
-      </nav>
-      <div class="container-fluid header">
-        <div class="container jumbotron-headline">
-          <h1>Explore</h1>
-          <h2>Your Amazing City Tour Together</h2>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="frontend/images/logo-heart.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Travellers Love Us</h5>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor.
+            </p>
+          </div>
         </div>
-        <div class="container jumbotron-searchbar">
-          <p>Find great places to holliday</p>
-          <div class="input-group mb-3">
-            <input
-              type="text"
-              class="form-control"
-              aria-describedby="button-addon2"
-            />
-            <button
-              class="btn btn-outline-secondary btn-search"
-              type="button"
-              id="button-addon2"
-            >
-              Search
-            </button>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="frontend/images/logo-agent.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Best Travel Agent</h5>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor.
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card h-100">
+          <img src="frontend/images/logo-support.png" class="card-img-top" alt="..." />
+          <div class="card-body">
+            <h5 class="card-title">Our Dedicated Support</h5>
+            <p class="card-text">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor.
+            </p>
           </div>
         </div>
       </div>
     </div>
-
-    <div class="container feature">
-      <div class="row row-cols-1 row-cols-md-4 g-4">
-        <div class="col">
-          <div class="card h-100">
-            <img
-              src="frontend/images/logo-guarantee.png"
-              class="card-img-top"
-              alt="..."
-            />
+  </div>
+  <div class="container paket">
+    <h2>Paket Tour</h2>
+    <div class="row row-cols-1 row-cols-md-3 g-4">
+      <div class="col">
+        <a href="produk.html">
+          <div class="card h-100 paket-card">
+            <img src="frontend/images/labuan-bajo1.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Best Price Guarantee</h5>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor.
-              </p>
+              <h5 class="card-title">5D Amazing Labuan Bajo</h5>
+              <h6 class="card-text">IDR. 750,000.00</h6>
             </div>
           </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img
-              src="frontend/images/logo-heart.png"
-              class="card-img-top"
-              alt="..."
-            />
+        </a>
+      </div>
+      <div class="col">
+        <a href="produk.html">
+          <div class="card h-100 paket-card">
+            <img src="frontend/images/labuan-bajo1.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Travellers Love Us</h5>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor.
-              </p>
+              <h5 class="card-title">5D Amazing Labuan Bajo</h5>
+              <h6 class="card-text">IDR. 750,000.00</h6>
             </div>
           </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img
-              src="frontend/images/logo-agent.png"
-              class="card-img-top"
-              alt="..."
-            />
+        </a>
+      </div>
+      <div class="col">
+        <a href="produk.html">
+          <div class="card h-100 paket-card">
+            <img src="frontend/images/labuan-bajo1.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Best Travel Agent</h5>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor.
-              </p>
+              <h5 class="card-title">5D Amazing Labuan Bajo</h5>
+              <h6 class="card-text">IDR. 750,000.00</h6>
             </div>
           </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img
-              src="frontend/images/logo-support.png"
-              class="card-img-top"
-              alt="..."
-            />
+        </a>
+      </div>
+      <div class="col">
+        <a href="produk.html">
+          <div class="card h-100 paket-card">
+            <img src="frontend/images/labuan-bajo1.jpg" class="card-img-top" alt="..." />
             <div class="card-body">
-              <h5 class="card-title">Our Dedicated Support</h5>
-              <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor.
-              </p>
+              <h5 class="card-title">5D Amazing Labuan Bajo</h5>
+              <h6 class="card-text">IDR. 750,000.00</h6>
             </div>
           </div>
-        </div>
+        </a>
       </div>
     </div>
-    <div class="container paket">
-      <h2>Paket Tour</h2>
-      <div class="row row-cols-1 row-cols-md-3 g-4">
-        <div class="col">
-          <div class="card h-100">
-            <img
-              src="frontend/images/labuan-bajo1.jpg"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">5D Amazing Labuan Bajo</h5>
-              <p class="card-text">harusnya harga</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img
-              src="frontend/images/labuan-bajo1.jpg"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">5D Amazing Labuan Bajo</h5>
-              <p class="card-text">harusnya harga</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img
-              src="frontend/images/labuan-bajo1.jpg"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">5D Amazing Labuan Bajo</h5>
-              <p class="card-text">harusnya harga</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img
-              src="frontend/images/labuan-bajo1.jpg"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">5D Amazing Labuan Bajo</h5>
-              <p class="card-text">harusnya harga</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <main></main>
-    <footer>
+  </div>
+  <main></main>
+  <footer>
+    <div class="container-fluid">
       <p>Copyright &copy; 2021 Adventura - Wildan Shafa Diandra</p>
-    </footer>
-    <script src="frontend/libraries/jquery/jquery-3.6.0.min.js"></script>
-    <script src="frontend/libraries/bootstrap/js/bootstrap.js"></script>
-  </body>
+    </div>
+  </footer>
+  <script src="frontend/libraries/jquery/jquery-3.6.0.min.js"></script>
+  <script src="frontend/libraries/bootstrap/js/bootstrap.js"></script>
+</body>
+
 </html>
