--- a/produk.html
+++ b/produk.html
@@ -23,7 +23,11 @@
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
           <a class="navbar-brand" href="#">
-            <img src="frontend/images/logo-adventura.png" alt="" height="60" />
+            <img
+              src="frontend/images/logo-adventura.png"
+              alt=""
+              style="padding-top: 20px; max-height: 100px"
+            />
           </a>
           <button
             class="navbar-toggler"
@@ -39,16 +43,145 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
               <li class="nav-item mx-2">
-                <button class="btn btn-primary btn-login" type="submit">
+                <button
+                  class="btn btn-primary btn-login"
+                  type="button"
+                  data-bs-toggle="modal"
+                  data-bs-target="#modal-login"
+                >
                   Login
                 </button>
               </li>
               <li class="nav-item mx-2">
-                <button class="btn btn-primary btn-register" type="submit">
+                <button
+                  class="btn btn-primary btn-register"
+                  type="button"
+                  data-bs-toggle="modal"
+                  data-bs-target="#modal-register"
+                >
                   Register
                 </button>
               </li>
             </ul>
+          </div>
+        </div>
+        <!-- Login Form -->
+        <div
+          class="modal fade"
+          id="modal-login"
+          tabindex="-1"
+          aria-labelledby="exampleModalLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Close"
+                ></button>
+              </div>
+              <div class="modal-body">
+                <div class="container login-form">
+                  <h1>Login</h1>
+                  <form>
+                    <div class="mb-3">
+                      <label for="exampleInputEmail1" class="form-label"
+                        >Email</label
+                      >
+                      <input
+                        type="email"
+                        class="form-control"
+                        id="exampleInputEmail1"
+                        aria-describedby="emailHelp"
+                      />
+                    </div>
+                    <div class="mb-3">
+                      <label for="exampleInputPassword1" class="form-label"
+                        >Password</label
+                      >
+                      <input
+                        type="password"
+                        class="form-control"
+                        id="exampleInputPassword1"
+                      />
+                    </div>
+                    <div class="ms-auto">
+                      <button type="submit" class="btn btn-primary">
+                        Submit
+                      </button>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- Register Form -->
+        <div
+          class="modal fade"
+          id="modal-register"
+          tabindex="-1"
+          aria-labelledby="exampleModalLabel"
+          aria-hidden="true"
+        >
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button
+                  type="button"
+                  class="btn-close"
+                  data-bs-dismiss="modal"
+                  aria-label="Close"
+                ></button>
+              </div>
+              <div class="modal-body">
+                <div class="container login-form">
+                  <h1>Register</h1>
+                  <form>
+                    <div class="mb-3">
+                      <label class="form-label">Username</label>
+                      <input type="text" class="form-control" id="username" />
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">Email</label>
+                      <input type="email" class="form-control" id="email" />
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">Password</label>
+                      <input
+                        type="password"
+                        class="form-control"
+                        id="password"
+                      />
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">Phone</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="phoneNumber"
+                      />
+                    </div>
+                    <div class="mb-3">
+                      <label class="form-label">Address</label>
+                      <input
+                        type="text"
+                        class="form-control"
+                        id="homeAddress"
+                      />
+                    </div>
+                    <div class="ms-auto">
+                      <button type="submit" class="btn btn-primary">
+                        Submit
+                      </button>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </nav>
@@ -193,12 +326,16 @@
           </div>
         </div>
         <hr />
-        <button>Book Now</button>
+        <a href="checkout.html">
+          <button>Book Now</button>
+        </a>
       </div>
     </div>
     <main></main>
     <footer>
-      <p>Copyright &copy; 2021 Adventura - Wildan Shafa Diandra</p>
+      <div class="container-fluid">
+        <p>Copyright &copy; 2021 Adventura - Wildan Shafa Diandra</p>
+      </div>
     </footer>
     <script src="frontend/libraries/jquery/jquery-3.6.0.min.js"></script>
     <script src="frontend/libraries/bootstrap/js/bootstrap.js"></script>
