--- a/checkout.html
+++ b/checkout.html
@@ -50,7 +50,47 @@
         </div>
       </nav>
     </div>
-    <main></main>
+    <main>
+      <div class="container card">
+        <div class="row row-cols-1 row-cols-sm-1 row-cols-md-1">
+          <div class="col-4">
+            <img src="frontend/images/logo-adventura-black.png" alt="" />
+            <h1>5D Amazing Labuan Bajo</h1>
+            <h2>Open Trip</h2>
+          </div>
+          <div class="col-4">
+            <div class="row">
+              <div class="col">
+                <h4>Accomodation</h4>
+                <p class="information-details">Hotel 4 Nights</p>
+              </div>
+              <div class="col">
+                <h4>Transportation</h4>
+                <p class="information-details">Garuda Indonesia</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col">
+                <h4>Duration</h4>
+                <p class="information-details">5 Day 4 Night</p>
+              </div>
+              <div class="col">
+                <h4>Date</h4>
+                <p class="information-details">12 March 2021</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-4">
+            <h1>Booking</h1>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-sm">col-sm</div>
+          <div class="col-sm">col-sm</div>
+          <div class="col-sm">col-sm</div>
+        </div>
+      </div>
+    </main>
     <footer>
       <div class="container-fluid">
         <p>Copyright &copy; 2021 Adventura - Wildan Shafa Diandra</p>
